# LMD

./: .env  .eslintrc.cjs  .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
python-sidecar/: README.md  pyproject.toml
python-sidecar/examples/: additives.csv  base_oils.csv  convert_format.json  generate_3d.json  import_additives.json  import_base_oils.json  import_excel.json  mock.csv  mordred_descriptors.json  predict.json  required_descriptors.json  required_descriptors_strict.json  standardize.json
python-sidecar/lmd_sidecar/: init.py  main.py
python-sidecar/lmd_sidecar/services/: descriptor_service.py  import_service.py  ml_service.py  mordred_service.py  rdkit_service.py  visualization_service.py
python-sidecar/lmd_sidecar/utils/: json_io.py
python-sidecar/tests/: test_json_io.py  test_rdkit_service.py
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/binaries/: README.md  lmd-sidecar-aarch64-apple-darwin
src-tauri/capabilities/: default.json
src-tauri/src/: app_paths.rs  main.rs
src-tauri/src/commands/: analysis.rs  base_additive.rs  descriptor.rs  experiment.rs  formulation.rs  mod.rs  molecule.rs  molecule_visualization.rs  sidecar.rs  workspace.rs
src-tauri/src/db/: migrations.rs  schema.rs
src/__tests__/: api.mock.test.ts  components.test.tsx  constants.test.ts  dashboard-page.test.tsx  downloads.test.ts  molecule-library-page.test.tsx  setup.ts  tauri.test.ts  types.test.ts
src/components/: EmptyState.tsx  LoadingBlock.tsx  MoleculeStructurePreview.tsx  PageErrorBoundary.tsx  PageHeader.module.css  PageHeader.tsx  StatCard.module.css  StatCard.tsx
src/layouts/: MainLayout.module.css  MainLayout.tsx
src/lib/: api.mock.ts  api.ts  browserShims.ts  constants.ts  downloads.ts  mockData.ts  tauri.ts  (+2 more)
(+38 files in other folders)
