[project]
name = "lmd-sidecar"
version = "0.1.0"
description = "Python scientific sidecar for Lubricant Materials Database"
requires-python = ">=3.10"
dependencies = [
  "matplotlib",
  "mordred",
  "numpy",
  "pandas",
  "pytest",
  "rdkit",
  "scipy",
  "scikit-learn"
]

[tool.setuptools.packages.find]
where = ["."]
