[project]
name = "lmd-sidecar"
version = "0.1.0"
description = "Python scientific sidecar for Lubricant Materials Database"
requires-python = ">=3.10"
dependencies = [
  "matplotlib",
  "mordred",
  "numpy",
  "pandas",
  "rdkit",
  "scipy",
  "scikit-learn"
]

[project.optional-dependencies]
dev = [
  "pytest"
]

[tool.setuptools.packages.find]
where = ["."]
